# ProjetS5

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO  compile.sh  launchTest.sh  sample_run.sh  tamere1  tamere2  travis.yml
.circleci/: config.yml
Examples_loader/: compile.sh
docs/: CallRelocation.md
src/: ARM_runner_example.c  ArmRun.c  ArmSim.c  CMakeLists.txt  Elf.c  Elf.h  ElfHeader.c  ElfIO.c  ElfIO.h  ElfImage.c  ElfImage.h  ElfLinker.c  ElfMod.c  ElfParser.c  ElfParser.h  ElfPrinter.c  ElfPrinter.h  ElfReader.c  ElfReader.h  ElfRelocation.c  ElfSection.c  ElfSectionheader.c  ElfString.c  ElfString.h  ElfStringTable.c  ElfStringTable.h  ElfSymbol.c  ElfWriter.c  ElfWriter.h  Elfstrtable.c  Elfstrtable.h  gdb_protocol.c  gdb_protocol.h  readelf.c  util.c  util.h
test/: CMakeLists.txt  UnitTest.c  UnitTest.h  clean.sh  compileTest1.sh  systemReadelf  test1.c  test1_include.c  testElfReader.c  testElfWriter.c  testHexDump.sh  testReadElf.sh  test_readelf_diff.sh
test/expectedOutputs/: readelf-S_ex3.o.out  readelf-S_ex3.out  readelf-h_BE.o.out  readelf-h_LE.o.out  readelf-h_ex3.o.out  readelf-h_ex3.out  readelf-r_ex3.o.out  readelf-r_ex3.out  readelf-s_ex3.o.out  readelf-s_ex3.out  readelf-x1_ex3.out
